@@ -1,8 +1,8 @@
 package com._ithon.speeksee.domain.script.controller;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -10,17 +10,22 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
+import com._ithon.speeksee.domain.member.entity.Member;
 import com._ithon.speeksee.domain.script.domain.Script;
+import com._ithon.speeksee.domain.script.domain.ScriptSortOption;
 import com._ithon.speeksee.domain.script.dto.response.ScriptResponse;
+import com._ithon.speeksee.domain.script.dto.response.ScriptsResponse;
+import com._ithon.speeksee.domain.script.dto.resquest.ScriptBatchSaveReq;
 import com._ithon.speeksee.domain.script.dto.resquest.ScriptGenerateRequest;
 import com._ithon.speeksee.domain.script.service.ScriptService;
-import com._ithon.speeksee.domain.member.entity.Member;
 import com._ithon.speeksee.global.auth.model.CustomUserDetails;
 import com._ithon.speeksee.global.infra.exception.response.ApiRes;
 
 import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
@@ -72,17 +77,87 @@ public class ScriptController {
 	}
 
 	@Operation(
-		summary = "내 대본 전체 조회",
-		description = "로그인한 사용자의 대본 목록을 조회합니다."
+		summary = "스크립트 여러 개 일괄 등록",
+		description = """
+	프론트에서 여러 개의 스크립트를 한 번에 등록합니다.  
+	카테고리: `NEWS`, `WEATHER`, `SELF_INTRODUCTION`, `DAILY`  
+	난이도: `EASY`, `MEDIUM`, `HARD`  
+	`isLevelTest`가 true이면 레벨 테스트용 스크립트로 저장됩니다.
+	""",
+		responses = {
+			@ApiResponse(responseCode = "200", description = "스크립트 일괄 등록 성공", content = @Content(
+				mediaType = "application/json",
+				schema = @Schema(implementation = ApiRes.class),
+				examples = @io.swagger.v3.oas.annotations.media.ExampleObject(
+					name = "성공 예시",
+					value = """
+						{
+						  "success": true,
+						  "data": [
+						    {
+						      "id": 1,
+						      "title": "자기소개",
+						      "content": "안녕하세요, 저는 ...",
+						      "category": "SELF_INTRODUCTION",
+						      "difficultyLevel": "MEDIUM",
+						      "isLevelTest": false,
+						      "practiceCount": 0,
+						      "createdAt": "2025-07-10T13:00:00",
+						      "updatedAt": "2025-07-10T13:00:00"
+						    },
+						    ...
+						  ],
+						  "message": "요청이 성공적으로 처리되었습니다.",
+						  "status": 200,
+						  "code": 0,
+						  "time": "2025-07-10T13:00:00"
+						}
+						"""
+				)
+			)),
+			@ApiResponse(responseCode = "400", description = "잘못된 요청 (유효성 검사 실패)"),
+			@ApiResponse(responseCode = "500", description = "서버 오류")
+		}
 	)
+	@PostMapping("/batch")
+	public ResponseEntity<ApiRes<List<ScriptsResponse>>> saveBatchScripts(
+		@Valid @RequestBody List<@Valid ScriptBatchSaveReq> requests,
+		@AuthenticationPrincipal CustomUserDetails user
+	) {
+		List<ScriptsResponse> result = scriptService.saveAll(requests, user.getMember());
+		return ResponseEntity.ok(ApiRes.success(result));
+	}
+
+
+
 	@GetMapping("/my")
-	public ApiRes<List<ScriptResponse>> getMyScripts(@AuthenticationPrincipal CustomUserDetails userDetails) {
-		List<Script> scripts = scriptService.getScriptsByMemberId(userDetails.getMember().getId());
+	public ApiRes<List<ScriptResponse>> getMyScripts(
+		@AuthenticationPrincipal CustomUserDetails userDetails,
+
+		@Parameter(
+			description = """
+        정렬 기준 (기본값: CREATED_DESC)
+        - CREATED_DESC: 생성일 최신순
+        - CREATED_ASC: 생성일 오래된 순
+        - COUNT_DESC: 연습 횟수 많은 순
+        - COUNT_ASC: 연습 횟수 적은 순
+        - TITLE_ASC: 제목 가나다순
+        - TITLE_DESC: 제목 역순
+        - DIFFICULTY_ASC: 난이도 쉬운 순
+        - DIFFICULTY_DESC: 난이도 어려운 순
+        - UPDATED_ASC: 마지막 연습 오래된 순
+        - UPDATED_DESC: 마지막 연습 최신순
+        """
+		)
+		@RequestParam(defaultValue = "CREATED_DESC") ScriptSortOption sort
+	) {
+		List<Script> scripts = scriptService.getScriptsByMemberId(userDetails.getMember().getId(), sort);
 		List<ScriptResponse> response = scripts.stream()
 			.map(ScriptResponse::from)
-			.collect(Collectors.toList());
+			.toList();
 		return ApiRes.success(response);
 	}
+
 
 	@Operation(
 		summary = "내 대본 단건 조회",
@@ -108,6 +183,13 @@ public class ScriptController {
 	) {
 		scriptService.deleteScriptByIdAndMemberId(scriptId, userDetails.getMember().getId());
 		return ApiRes.success(null, "대본이 성공적으로 삭제되었습니다.");
+	}
+
+	@Operation(summary = "레벨 테스트 스크립트 조회", description = "레벨 테스트용 정적 스크립트를 무작위로 반환합니다.")
+	@GetMapping("/level-test")
+	public ApiRes<ScriptResponse> getLevelTestScript() {
+		Script script = scriptService.getLevelTestScript();
+		return ApiRes.success(ScriptResponse.from(script));
 	}
 
 }
